force-app/main/default/objects/Empatia__c/Empatia__c.object-meta.xml
<CustomObject>
    <label>Empatía</label>
    <nameField>
        <displayFormat>EMP-{0000000}</displayFormat>
        <label>Empatia Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empatía</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>