force-app/main/default/objects/Empatia__c/fields/Administrative_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_2__c</fullName>
    <formula>Empatia_Activista__r.Citizen__r.Administrative_Level_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrative Level 2</label>
    <type>Text</type>
</CustomField>