force-app/main/default/objects/Empatia__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <formula>TEXT(Ciudad_Catamarca__c)+
TEXT(Ciudad_Chaco__c)+
TEXT(Ciudad_Chubut__c)+
TEXT(Ciudad_Cordoba__c)+
TEXT(Ciudad_Corrientes__c)+
TEXT(Ciudad_Entre_Rios__c)+
TEXT(Ciudad_Formosa__c)+
TEXT(Ciudad_Jujuy__c)+
TEXT(Ciudad_La_Pampa__c)+
TEXT(Ciudad_La_Rioja__c)+
TEXT(CIudad_Mendoza__c)+
TEXT(Ciudad_Misiones__c)+
TEXT(Ciudad_Neuquen__c)+
TEXT(Ciudad_Rio_Negro__c)+
TEXT(Ciudad_Salta__c)+
TEXT(Ciudad_San_Juan__c)+
TEXT(Ciudad_San_Luis__c)+
TEXT(Ciudad_Santa_Cruz__c)+
TEXT(Ciudad_Santa_Fe__c)+
TEXT(Ciudad_Santiago_del_Estero__c)+
TEXT(Ciudad_Tierra_del_Fuego__c)+
TEXT(Ciudad_Tucuman__c)+
TEXT(Municipio_Buenos_Aires__c)</formula>
    <label>Ciudad</label>
    <type>Text</type>
</CustomField>