force-app/main/default/objects/Empatia__c/fields/Ciudad_Catamarca__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Catamarca__c</fullName>
    <label>Ciudad Catamarca</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aconquija</fullName>
            </value>
            <value>
                <fullName>Ancasti</fullName>
            </value>
            <value>
                <fullName>Andagalá</fullName>
            </value>
            <value>
                <fullName>Antofagasta de la Sierra</fullName>
            </value>
            <value>
                <fullName>Belén</fullName>
            </value>
            <value>
                <fullName>Capayán</fullName>
            </value>
            <value>
                <fullName>Corral Quemado</fullName>
            </value>
            <value>
                <fullName>El Alto</fullName>
            </value>
            <value>
                <fullName>EL Rodeo</fullName>
            </value>
            <value>
                <fullName>Fiambalá</fullName>
            </value>
            <value>
                <fullName>Fray Mamerto Esquiú</fullName>
            </value>
            <value>
                <fullName>Hualfín</fullName>
            </value>
            <value>
                <fullName>Huillapima</fullName>
            </value>
            <value>
                <fullName>Icaño</fullName>
            </value>
            <value>
                <fullName>La Puerta</fullName>
            </value>
            <value>
                <fullName>Las Juntas</fullName>
            </value>
            <value>
                <fullName>Londres</fullName>
            </value>
            <value>
                <fullName>Los Altos</fullName>
            </value>
            <value>
                <fullName>Los Varela</fullName>
            </value>
            <value>
                <fullName>Mutquín</fullName>
            </value>
            <value>
                <fullName>Paclín</fullName>
            </value>
            <value>
                <fullName>Pomán</fullName>
            </value>
            <value>
                <fullName>Pozo de Piedra</fullName>
            </value>
            <value>
                <fullName>Puerta de Corral Quemado</fullName>
            </value>
            <value>
                <fullName>Puerta de San José</fullName>
            </value>
            <value>
                <fullName>Recreo</fullName>
            </value>
            <value>
                <fullName>San Fernando</fullName>
            </value>
            <value>
                <fullName>San Fernando del Valle de Catamarca</fullName>
            </value>
            <value>
                <fullName>San José</fullName>
            </value>
            <value>
                <fullName>Santa María</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>