force-app/main/default/objects/Empatia__c/fields/Ciudad_Chaco__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Chaco__c</fullName>
    <label>Ciudad Chaco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aviá Teraí</fullName>
            </value>
            <value>
                <fullName>Barranqueras</fullName>
            </value>
            <value>
                <fullName>Basail</fullName>
            </value>
            <value>
                <fullName>Campo Largo</fullName>
            </value>
            <value>
                <fullName>Capitán Solari</fullName>
            </value>
            <value>
                <fullName>Charadai</fullName>
            </value>
            <value>
                <fullName>Charata</fullName>
            </value>
            <value>
                <fullName>Chorotis</fullName>
            </value>
            <value>
                <fullName>Ciervo Petiso</fullName>
            </value>
            <value>
                <fullName>Colonia Aborigen</fullName>
            </value>
            <value>
                <fullName>Colonia Benítez</fullName>
            </value>
            <value>
                <fullName>Colonia Elisa</fullName>
            </value>
            <value>
                <fullName>Colonia Popular</fullName>
            </value>
            <value>
                <fullName>Colonias Unidas</fullName>
            </value>
            <value>
                <fullName>Concepción del Bermejo</fullName>
            </value>
            <value>
                <fullName>Coronel Du Graty</fullName>
            </value>
            <value>
                <fullName>Corzuela</fullName>
            </value>
            <value>
                <fullName>Cote Lai</fullName>
            </value>
            <value>
                <fullName>El Espinillo</fullName>
            </value>
            <value>
                <fullName>El Sauzalito</fullName>
            </value>
            <value>
                <fullName>Enrique Urién</fullName>
            </value>
            <value>
                <fullName>Fontana</fullName>
            </value>
            <value>
                <fullName>Fuerte Esperanza</fullName>
            </value>
            <value>
                <fullName>Gancedo</fullName>
            </value>
            <value>
                <fullName>General Capdevila</fullName>
            </value>
            <value>
                <fullName>General José de San Martín</fullName>
            </value>
            <value>
                <fullName>General Pinedo</fullName>
            </value>
            <value>
                <fullName>General Vedia</fullName>
            </value>
            <value>
                <fullName>Hermoso Campo</fullName>
            </value>
            <value>
                <fullName>Isla del Cerrito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>