force-app/main/default/objects/Empatia__c/fields/Ciudad_Chubut__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Chubut__c</fullName>
    <label>Ciudad Chubut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alto Río Senguer</fullName>
            </value>
            <value>
                <fullName>Camarones</fullName>
            </value>
            <value>
                <fullName>Cholila</fullName>
            </value>
            <value>
                <fullName>Comodoro Rivadavia</fullName>
            </value>
            <value>
                <fullName>Corvocado</fullName>
            </value>
            <value>
                <fullName>Dolavon</fullName>
            </value>
            <value>
                <fullName>El Hoyo</fullName>
            </value>
            <value>
                <fullName>El Maitén</fullName>
            </value>
            <value>
                <fullName>Epuyén</fullName>
            </value>
            <value>
                <fullName>Esquel</fullName>
            </value>
            <value>
                <fullName>Gaiman</fullName>
            </value>
            <value>
                <fullName>Gobernador Costa</fullName>
            </value>
            <value>
                <fullName>Gualjaina</fullName>
            </value>
            <value>
                <fullName>José de San Martín</fullName>
            </value>
            <value>
                <fullName>Lago Puelo</fullName>
            </value>
            <value>
                <fullName>Paso de los Indios</fullName>
            </value>
            <value>
                <fullName>Puerto Madryn</fullName>
            </value>
            <value>
                <fullName>Puerto Pirámides</fullName>
            </value>
            <value>
                <fullName>Rada Tilly</fullName>
            </value>
            <value>
                <fullName>Rawson</fullName>
            </value>
            <value>
                <fullName>Río Mayo</fullName>
            </value>
            <value>
                <fullName>Río Pico</fullName>
            </value>
            <value>
                <fullName>Sarmiento</fullName>
            </value>
            <value>
                <fullName>Tecka</fullName>
            </value>
            <value>
                <fullName>Trelew</fullName>
            </value>
            <value>
                <fullName>Trevelin</fullName>
            </value>
            <value>
                <fullName>Veintiocho de Julio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>