force-app/main/default/objects/Empatia__c/fields/Ciudad_Cordoba__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Cordoba__c</fullName>
    <label>Ciudad Cordoba</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calamuchita</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Colón</fullName>
            </value>
            <value>
                <fullName>Cruz del Eje</fullName>
            </value>
            <value>
                <fullName>General Roca</fullName>
            </value>
            <value>
                <fullName>General San Martín</fullName>
            </value>
            <value>
                <fullName>Ischilín</fullName>
            </value>
            <value>
                <fullName>Juárez Celman</fullName>
            </value>
            <value>
                <fullName>Marcos Juárez</fullName>
            </value>
            <value>
                <fullName>Minas</fullName>
            </value>
            <value>
                <fullName>Pocho</fullName>
            </value>
            <value>
                <fullName>Presidente Roque Sáenz Peña</fullName>
            </value>
            <value>
                <fullName>Punilla</fullName>
            </value>
            <value>
                <fullName>Río Cuarto</fullName>
            </value>
            <value>
                <fullName>Río Primero</fullName>
            </value>
            <value>
                <fullName>Río Seco</fullName>
            </value>
            <value>
                <fullName>Río Segundo</fullName>
            </value>
            <value>
                <fullName>San Alberto</fullName>
            </value>
            <value>
                <fullName>San Javier</fullName>
            </value>
            <value>
                <fullName>San Justo</fullName>
            </value>
            <value>
                <fullName>Santa María</fullName>
            </value>
            <value>
                <fullName>Sobremonte</fullName>
            </value>
            <value>
                <fullName>Tercero Arriba</fullName>
            </value>
            <value>
                <fullName>Totoral</fullName>
            </value>
            <value>
                <fullName>Tulumba</fullName>
            </value>
            <value>
                <fullName>Unión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>