force-app/main/default/objects/Empatia__c/fields/Ciudad_Corrientes__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Corrientes__c</fullName>
    <label>Ciudad Corrientes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bella Vista</fullName>
            </value>
            <value>
                <fullName>Berón de Astrada</fullName>
            </value>
            <value>
                <fullName>Bonpland</fullName>
            </value>
            <value>
                <fullName>Caá Catí</fullName>
            </value>
            <value>
                <fullName>Cazadores Correntinos</fullName>
            </value>
            <value>
                <fullName>Cecilio Echevarría</fullName>
            </value>
            <value>
                <fullName>Chavarría</fullName>
            </value>
            <value>
                <fullName>Colonia Carlos Pellegrini</fullName>
            </value>
            <value>
                <fullName>Colonia Carolina</fullName>
            </value>
            <value>
                <fullName>Colonia Libertad</fullName>
            </value>
            <value>
                <fullName>Colonia Liebig</fullName>
            </value>
            <value>
                <fullName>Colonia Pando</fullName>
            </value>
            <value>
                <fullName>Concepción del Yaguareté Corá</fullName>
            </value>
            <value>
                <fullName>Corrientes</fullName>
            </value>
            <value>
                <fullName>Curuzú Cuatiá</fullName>
            </value>
            <value>
                <fullName>El Sombrero</fullName>
            </value>
            <value>
                <fullName>Empedrado</fullName>
            </value>
            <value>
                <fullName>Esquina</fullName>
            </value>
            <value>
                <fullName>Estación Torrent</fullName>
            </value>
            <value>
                <fullName>Felipe Yofre</fullName>
            </value>
            <value>
                <fullName>Garruchos</fullName>
            </value>
            <value>
                <fullName>General Alvear</fullName>
            </value>
            <value>
                <fullName>Gobernador Ing. Valentín Virasoro</fullName>
            </value>
            <value>
                <fullName>Gobernador Martínez</fullName>
            </value>
            <value>
                <fullName>Goya</fullName>
            </value>
            <value>
                <fullName>Guaviraví</fullName>
            </value>
            <value>
                <fullName>Herlitzka</fullName>
            </value>
            <value>
                <fullName>Itá Ibaté</fullName>
            </value>
            <value>
                <fullName>Itatí</fullName>
            </value>
            <value>
                <fullName>Ituzaingó</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>