force-app/main/default/objects/Empatia__c/fields/Ciudad_Entre_Rios__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Entre_Rios__c</fullName>
    <label>Ciudad Entre Rios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aldea Brasilera</fullName>
            </value>
            <value>
                <fullName>Aldea María Luisa</fullName>
            </value>
            <value>
                <fullName>Aldea San Antonio</fullName>
            </value>
            <value>
                <fullName>Aranguren</fullName>
            </value>
            <value>
                <fullName>Basavilbaso</fullName>
            </value>
            <value>
                <fullName>Bovril</fullName>
            </value>
            <value>
                <fullName>Caseros</fullName>
            </value>
            <value>
                <fullName>Ceibas</fullName>
            </value>
            <value>
                <fullName>Cerrito</fullName>
            </value>
            <value>
                <fullName>Chajarí</fullName>
            </value>
            <value>
                <fullName>Colonia Avellaneda</fullName>
            </value>
            <value>
                <fullName>Colonia Ayuí</fullName>
            </value>
            <value>
                <fullName>Colonia Elía</fullName>
            </value>
            <value>
                <fullName>Colón</fullName>
            </value>
            <value>
                <fullName>Concepción del Uruguay</fullName>
            </value>
            <value>
                <fullName>Concordia</fullName>
            </value>
            <value>
                <fullName>Conscripto Bernardi</fullName>
            </value>
            <value>
                <fullName>Crespo</fullName>
            </value>
            <value>
                <fullName>Diamante</fullName>
            </value>
            <value>
                <fullName>El Pingo</fullName>
            </value>
            <value>
                <fullName>Enrique Carbó</fullName>
            </value>
            <value>
                <fullName>Estancia Grande</fullName>
            </value>
            <value>
                <fullName>Federación</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>General Campos</fullName>
            </value>
            <value>
                <fullName>General Galarza</fullName>
            </value>
            <value>
                <fullName>General Ramírez</fullName>
            </value>
            <value>
                <fullName>Gilbert</fullName>
            </value>
            <value>
                <fullName>Gobernador Maciá</fullName>
            </value>
            <value>
                <fullName>Gobernador Mansilla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>