force-app/main/default/objects/Empatia__c/fields/Ciudad_Formosa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Formosa__c</fullName>
    <label>Ciudad Formosa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clorinda</fullName>
            </value>
            <value>
                <fullName>Comandante Fontana</fullName>
            </value>
            <value>
                <fullName>El Colorado</fullName>
            </value>
            <value>
                <fullName>El Espinillo</fullName>
            </value>
            <value>
                <fullName>Estanislao del Campo</fullName>
            </value>
            <value>
                <fullName>Formosa</fullName>
            </value>
            <value>
                <fullName>General Enrique Mosconi</fullName>
            </value>
            <value>
                <fullName>General Lucio Victorio Mansilla</fullName>
            </value>
            <value>
                <fullName>General Manuel Belgrano</fullName>
            </value>
            <value>
                <fullName>Herradura</fullName>
            </value>
            <value>
                <fullName>Ibarreta</fullName>
            </value>
            <value>
                <fullName>Ingeniero Guillermo Nicasio Juárez</fullName>
            </value>
            <value>
                <fullName>Laguna Blanca</fullName>
            </value>
            <value>
                <fullName>Laguna Neck</fullName>
            </value>
            <value>
                <fullName>Laguna Yema</fullName>
            </value>
            <value>
                <fullName>Las Lomitas</fullName>
            </value>
            <value>
                <fullName>Mayor Vicente Villafañe</fullName>
            </value>
            <value>
                <fullName>Misión San Francisco de Laishí</fullName>
            </value>
            <value>
                <fullName>Misión Tacaaglé</fullName>
            </value>
            <value>
                <fullName>Pablo Santo</fullName>
            </value>
            <value>
                <fullName>Pirané</fullName>
            </value>
            <value>
                <fullName>Pozo del Tigre</fullName>
            </value>
            <value>
                <fullName>Riacho He-Hé</fullName>
            </value>
            <value>
                <fullName>San Martín Dos</fullName>
            </value>
            <value>
                <fullName>Villa Dos Trece</fullName>
            </value>
            <value>
                <fullName>Villa Escolar</fullName>
            </value>
            <value>
                <fullName>Villa General Güemes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>