force-app/main/default/objects/Empatia__c/fields/Ciudad_Jujuy__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Jujuy__c</fullName>
    <label>Ciudad Jujuy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abra Pampa</fullName>
            </value>
            <value>
                <fullName>Aguas Calientes</fullName>
            </value>
            <value>
                <fullName>Caimancito</fullName>
            </value>
            <value>
                <fullName>Calilegua</fullName>
            </value>
            <value>
                <fullName>El Aguilar</fullName>
            </value>
            <value>
                <fullName>El Carmen</fullName>
            </value>
            <value>
                <fullName>EL Talar</fullName>
            </value>
            <value>
                <fullName>Fraile Pintado</fullName>
            </value>
            <value>
                <fullName>Humahuaca</fullName>
            </value>
            <value>
                <fullName>La Esperanza</fullName>
            </value>
            <value>
                <fullName>La Mendieta</fullName>
            </value>
            <value>
                <fullName>La Quiaca</fullName>
            </value>
            <value>
                <fullName>Libertador General San Martín</fullName>
            </value>
            <value>
                <fullName>Maimará</fullName>
            </value>
            <value>
                <fullName>Monterrico</fullName>
            </value>
            <value>
                <fullName>Palma Sola</fullName>
            </value>
            <value>
                <fullName>Palpalá</fullName>
            </value>
            <value>
                <fullName>Pampa Blanca</fullName>
            </value>
            <value>
                <fullName>Perico</fullName>
            </value>
            <value>
                <fullName>Puesto Viejo</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
            <value>
                <fullName>San Pedro de Jujuy</fullName>
            </value>
            <value>
                <fullName>San Salvador de Jujuy</fullName>
            </value>
            <value>
                <fullName>Santa Clara</fullName>
            </value>
            <value>
                <fullName>Tilcara</fullName>
            </value>
            <value>
                <fullName>Yala</fullName>
            </value>
            <value>
                <fullName>Yuto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>