force-app/main/default/objects/Empatia__c/fields/Ciudad_La_Pampa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_La_Pampa__c</fullName>
    <label>Ciudad La Pampa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abramo</fullName>
            </value>
            <value>
                <fullName>Algarrobo del Águila</fullName>
            </value>
            <value>
                <fullName>Alpachiri</fullName>
            </value>
            <value>
                <fullName>Alta Italia</fullName>
            </value>
            <value>
                <fullName>Anguil</fullName>
            </value>
            <value>
                <fullName>Arata</fullName>
            </value>
            <value>
                <fullName>Ataliva Roca</fullName>
            </value>
            <value>
                <fullName>Bernardo Larroudé</fullName>
            </value>
            <value>
                <fullName>Bernasconi</fullName>
            </value>
            <value>
                <fullName>Caleufú</fullName>
            </value>
            <value>
                <fullName>Carro Quemado</fullName>
            </value>
            <value>
                <fullName>Catriló</fullName>
            </value>
            <value>
                <fullName>Ceballos</fullName>
            </value>
            <value>
                <fullName>Colonia 25 de Mayo</fullName>
            </value>
            <value>
                <fullName>Colonia Barón</fullName>
            </value>
            <value>
                <fullName>Colonia Santa Teresa</fullName>
            </value>
            <value>
                <fullName>Conhello</fullName>
            </value>
            <value>
                <fullName>Coronel Hilario Lagos</fullName>
            </value>
            <value>
                <fullName>Doblas</fullName>
            </value>
            <value>
                <fullName>Dorila</fullName>
            </value>
            <value>
                <fullName>Eduardo Castex</fullName>
            </value>
            <value>
                <fullName>Embajador Martini</fullName>
            </value>
            <value>
                <fullName>General Acha</fullName>
            </value>
            <value>
                <fullName>General Manuel Campos</fullName>
            </value>
            <value>
                <fullName>General Pico</fullName>
            </value>
            <value>
                <fullName>General San Martín</fullName>
            </value>
            <value>
                <fullName>Gobernador Duval</fullName>
            </value>
            <value>
                <fullName>Guatraché</fullName>
            </value>
            <value>
                <fullName>Ingeniero Luiggi</fullName>
            </value>
            <value>
                <fullName>Intendente Alvear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>