force-app/main/default/objects/Empatia__c/fields/Ciudad_La_Rioja__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_La_Rioja__c</fullName>
    <label>Ciudad La Rioja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aimogasta / Arauco</fullName>
            </value>
            <value>
                <fullName>Aminga / Castro Barros</fullName>
            </value>
            <value>
                <fullName>Chamical</fullName>
            </value>
            <value>
                <fullName>Chepes / R. Vera Peñaloza</fullName>
            </value>
            <value>
                <fullName>Chilecito</fullName>
            </value>
            <value>
                <fullName>Famatina</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Los Sauces / San Blas</fullName>
            </value>
            <value>
                <fullName>Malanzán / Gral. J. F. Quiroga</fullName>
            </value>
            <value>
                <fullName>Olta / Gral. Belgrano</fullName>
            </value>
            <value>
                <fullName>Patquía / Independencia</fullName>
            </value>
            <value>
                <fullName>Tama / Gral. Peñaloza</fullName>
            </value>
            <value>
                <fullName>Ulapes / San Martín</fullName>
            </value>
            <value>
                <fullName>Villa Castelli</fullName>
            </value>
            <value>
                <fullName>Villa San José de Vinchina</fullName>
            </value>
            <value>
                <fullName>Villa Sanagasta</fullName>
            </value>
            <value>
                <fullName>Villa Santa Rita de Catuna / Gral. Ocampo</fullName>
            </value>
            <value>
                <fullName>Villa Unión / Cnel. F. Varela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>