force-app/main/default/objects/Empatia__c/fields/CIudad_Mendoza__c.field-meta.xml
<CustomField>
    <fullName>CIudad_Mendoza__c</fullName>
    <label>CIudad Mendoza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Alvear</fullName>
            </value>
            <value>
                <fullName>Godoy Cruz</fullName>
            </value>
            <value>
                <fullName>Junín</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Las Heras</fullName>
            </value>
            <value>
                <fullName>Luján de Cuyo</fullName>
            </value>
            <value>
                <fullName>Maipú</fullName>
            </value>
            <value>
                <fullName>Malargüe</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Rivadavia</fullName>
            </value>
            <value>
                <fullName>San Martín</fullName>
            </value>
            <value>
                <fullName>San Rafael</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Tunuyán</fullName>
            </value>
            <value>
                <fullName>Tupungato</fullName>
            </value>
            <value>
                <fullName>Villa Nueva</fullName>
            </value>
            <value>
                <fullName>Villa San Carlos</fullName>
            </value>
            <value>
                <fullName>Villa Tulumaya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>