force-app/main/default/objects/Empatia__c/fields/Ciudad_Misiones__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Misiones__c</fullName>
    <label>Ciudad Misiones</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alba Posse</fullName>
            </value>
            <value>
                <fullName>Almafuerte</fullName>
            </value>
            <value>
                <fullName>Apóstoles</fullName>
            </value>
            <value>
                <fullName>Aristóbulo del Valle</fullName>
            </value>
            <value>
                <fullName>Arroyo del Medio</fullName>
            </value>
            <value>
                <fullName>Azara</fullName>
            </value>
            <value>
                <fullName>Bernardo de Irigoyen</fullName>
            </value>
            <value>
                <fullName>Bonpland</fullName>
            </value>
            <value>
                <fullName>Caá Yari</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Campo Ramón</fullName>
            </value>
            <value>
                <fullName>Campo Viera</fullName>
            </value>
            <value>
                <fullName>Candelaria</fullName>
            </value>
            <value>
                <fullName>Capioví</fullName>
            </value>
            <value>
                <fullName>Caraguatay</fullName>
            </value>
            <value>
                <fullName>Cerro Azul</fullName>
            </value>
            <value>
                <fullName>Cerro Corá</fullName>
            </value>
            <value>
                <fullName>Colonia Alberdi</fullName>
            </value>
            <value>
                <fullName>Colonia Aurora</fullName>
            </value>
            <value>
                <fullName>Colonia Delicia</fullName>
            </value>
            <value>
                <fullName>Colonia Polana</fullName>
            </value>
            <value>
                <fullName>Colonia Victoria</fullName>
            </value>
            <value>
                <fullName>Colonia Wanda</fullName>
            </value>
            <value>
                <fullName>Comandante Andrés Guacurari / Comandante Andresito</fullName>
            </value>
            <value>
                <fullName>Concepción de la Sierra</fullName>
            </value>
            <value>
                <fullName>Corpus</fullName>
            </value>
            <value>
                <fullName>2 Arroyos</fullName>
            </value>
            <value>
                <fullName>2 de Mayo</fullName>
            </value>
            <value>
                <fullName>El Alcazár</fullName>
            </value>
            <value>
                <fullName>El Soberbio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>